<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_google_pixel_4__4xl___2_welcome___no_rectangles">

    <TextView
        android:id="@+id/welcome_tv"
...
        android:paddingRight="8dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_welcome_start_new_game_button"
            android:layout_width="235dp"
            android:layout_height="89dp"
            android:background="@drawable/button_from_left"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/start"
...
